# python-zebrastream-io

./: .gitignore  README.md  devbox.json  pyproject.toml
examples/: pulse-numbers.py  stdin-send-async.py  stdin-send-gzip.py  stdin-send-lines-async.py  stdin-send-lines-sync.py  stdin-send-lines.py  stdin-send-sync-gzip.py  stdin-send-sync.py  stdin-send.py  stdout-receive-async.py  stdout-receive-gzip.py  stdout-receive-lines.py  stdout-receive-sync-gzip.py  stdout-receive-sync.py  stdout-receive.py
src/zebrastream/io/: __init__.py  _age_rt.py  _byte_buffer.py  _core.py  _exceptions.py  cli.py  file.py
tests/: __init__.py  test_cli.py
