[tool.poetry]
name = "zebrastream-io"
version = "0.5.0"
description = "A Pythonic client library for streaming data with ZebraStream."
authors = ["Johannes Dröge <p5p129dw@parsimonit.com>"]
readme = "README.md"
packages = [
    { include = "zebrastream", from = "src" },  # needed if namespaced package differs from package name
]
include = [
    "src/zebrastream/io/py.typed"
]

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = "^3.12.14"
anyio = "^4.9.0"
cryptography = "^41.0"

# CLI optional extras
typer = { version = "^0.16.0", optional = true }
confuse = { version = "^2.0.1", optional = true }

[tool.poetry.extras]
cli = ["typer", "confuse"]

[tool.poetry.scripts]
zebrastream = "zebrastream.io.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
mypy = "^1.17.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that connect to the real relay (deselected by default)",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
